[gd_scene load_steps=6 format=2]

[ext_resource path="res://World/Door_Switch_Metal.png" type="Texture" id=1]
[ext_resource path="res://World/Launcher.gd" type="Script" id=2]
[ext_resource path="res://Music and Sounds/squish_1.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0

[sub_resource type="CircleShape2D" id=2]
radius = 180.108

[node name="Launcher" type="Area2D"]
scale = Vector2( 0.8, 0.8 )
z_index = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.25, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 0.1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
